--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         cache: 'pip'
@@ -61,9 +61,19 @@ jobs:
         ACCESS_TOKEN_EXPIRE_MINUTES: 30
       run: |
         cd phunparty-backend
-        uvicorn app.main:app --host 0.0.0.0 --port 8000 &
-        sleep 10
-        curl -f http://localhost:8000/docs || exit 1
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)"
+        python -c "import app.main" || echo "Testing alternative import paths..."
+        if [ -f "main.py" ]; then
+          uvicorn main:app --host 0.0.0.0 --port 8000 &
+        elif [ -f "app/main.py" ]; then
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+        else
+          echo "Could not find main.py or app/main.py"
+          find . -name "*.py" -path "*/main.py" | head -5
+          exit 1
+        fi
+        sleep 15
+        curl -f http://localhost:8000/docs || curl -f http://localhost:8000/ || exit 1
     
     - name: Install frontend dependencies (if exists)
       run: |
