--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -62,13 +62,13 @@ jobs:
       run: |
         cd phunparty-backend
         export PYTHONPATH="${PYTHONPATH}:$(pwd)"
-        python -c "import app.main" || echo "Testing alternative import paths..."
+        python -c "import App.main" || echo "Testing alternative import paths..."
         if [ -f "main.py" ]; then
-          uvicorn main:app --host 0.0.0.0 --port 8000 &
-        elif [ -f "app/main.py" ]; then
-          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+          uvicorn main:App --host 0.0.0.0 --port 8000 &
+        elif [ -f "App/main.py" ]; then
+          uvicorn App.main:App --host 0.0.0.0 --port 8000 &
         else
-          echo "Could not find main.py or app/main.py"
+          echo "Could not find main.py or App/main.py"
           find . -name "*.py" -path "*/main.py" | head -5
           exit 1
         fi
@@ -100,7 +100,7 @@ jobs:
         
         # Test game session creation
         curl -X POST http://localhost:8000/api/v1/sessions \
-          -H "Content-Type: application/json" \
+          -H "Content-Type: Application/json" \
           -d '{"host_name": "TestHost", "game_type": "trivia"}' || echo "Session creation test failed"
     
     - name: Test WebSocket connections
