--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -56,11 +56,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install safety bandit
     
-    - name: Run Safety check for known vulnerabilities
+    - name: Run Safety scan for known vulnerabilities
       run: |
         cd phunparty-backend
-        safety check -r requirements.txt --json --output safety-report.json || true
-        safety check -r requirements.txt || echo "Safety check found vulnerabilities"
+        safety scan -r requirements.txt --json --output safety-report.json || true
+        safety scan -r requirements.txt || echo "Safety scan found vulnerabilities"
     
     - name: Run Bandit security linter
       run: |
