--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,8 @@ jobs:
         DB_PASSWORD: test_password
         DB_NAME: test_phunparty
         SECRET_KEY: test_secret_key_for_testing_only
+        ALGORITHM: HS256
+        ACCESS_TOKEN_EXPIRE_MINUTES: 30
       run: |
         cd phunparty-backend
         pytest
