--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,23 @@ Thumbs.db
 *.egg-info/
 dist/
 build/
+
+# Test artifacts
+.pytest_cache/
+.coverage
+coverage.xml
+htmlcov/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# React Native
+.expo/
+.expo-shared/
+
+# Build outputs
+web-host-ui/build/
+mobile-app/dist/
