--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest",
+    "test": "jest --config=jest.config.json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
@@ -22,9 +22,5 @@
     "jest": "^29.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.0.0"
-  },
-  "jest": {
-    "preset": "react-native",
-    "setupFilesAfterEnv": ["<rootDir>/jest-setup.js"]
   }
 }
