Update GitHub Actions workflows and fix component import in index.js

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Web Host UI to GitHub Pages
 
 on:
     push:
-        branches: [main]
+        branches: [github-pages]
         paths:
             - "web-host-ui/**"
     workflow_dispatch:
