--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,76 +1,81 @@
-name: Deploy Web Host UI to GitHub Pages
+name: Deploy FastAPI to Linode
 
 on:
-    push:
-        branches: [main]
-        paths:
-            - "web-host-ui/**"
-    workflow_dispatch:
+  push:
+    branches: [main]
+    paths:
+      - "PhunParty/**"
+      - ".github/workflows/deploy.yml"
+  workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-    contents: read
-    pages: write
-    id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-    group: "pages"
-    cancel-in-progress: false
+  group: deploy-phun-api
+  cancel-in-progress: true
+
+permissions:
+  contents: read
 
 jobs:
-    # Build job
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "18"
-                  cache: "npm"
-                  cache-dependency-path: "web-host-ui/package-lock.json"
+    env:
+      SSH_HOST: ${{ secrets.SSH_HOST }}
+      SSH_PORT: ${{ secrets.SSH_PORT }}
+      SSH_USER: ${{ secrets.SSH_USER }}
+      TARGET_DIR: ${{ secrets.TARGET_DIR }}
+      PYTHON: ${{ secrets.PYTHON }}
+      PIP: ${{ secrets.PIP }}
 
-            - name: Setup Pages
-              uses: actions/configure-pages@v4
-              with:
-                  # Automatically inject basePath in your Next.js configuration file and disable
-                  # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-                  #
-                  # You may remove this line if you want to manage the configuration yourself.
-                  static_site_generator: create-react-app
+    steps:
+      - name: Checkout
+      - uses: actions/checkout@v4
 
-            - name: Install dependencies
-              run: |
-                  cd web-host-ui
-                  npm ci
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          # trust host key
+          ssh-keyscan -p "$SSH_PORT" "$SSH_HOST" >> ~/.ssh/known_hosts
 
-            - name: Build application
-              run: |
-                  cd web-host-ui
-                  npm run build
-              env:
-                  # Set the base path for GitHub Pages
-                  PUBLIC_URL: /PhunParty
+      - name: Rsync code to server
+        run: |
+          rsync -az --delete \
+            --exclude ".git" \
+            --exclude ".github" \
+            PhunParty/ "$SSH_USER@$SSH_HOST:$TARGET_DIR/"
 
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: web-host-ui/build
+      - name: Install backend deps on server
+        run: |
+          ssh -p "$SSH_PORT" "$SSH_USER@$SSH_HOST" bash -lc '
+            set -e
+            cd "$TARGET_DIR"
+            # ensure venv exists (idempotent)
+            [ -x .venv/bin/python ] || python3 -m venv .venv
+            . .venv/bin/activate
+            if [ -f phunparty-backend/requirements.txt ]; then
+              pip install --upgrade pip wheel
+              pip install -r phunparty-backend/requirements.txt
+            fi
+          '
 
-    # Deployment job
-    deploy:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
-        needs: build
-        if: github.ref == 'refs/heads/main'
+      - name: Run Alembic (if present)
+        run: |
+          ssh -p "$SSH_PORT" "$SSH_USER@$SSH_HOST" bash -lc '
+            set -e
+            cd "$TARGET_DIR"
+            . .venv/bin/activate
+            if [ -f phunparty-backend/alembic.ini ]; then
+              cd phunparty-backend
+              alembic upgrade head
+            fi
+          '
 
-        steps:
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+      - name: Restart systemd service
+        run: |
+          ssh -p "$SSH_PORT" "$SSH_USER@$SSH_HOST" bash -lc '
+            sudo systemctl restart phun-api
+            sudo systemctl is-active phun-api
+          '
