fix: update paths in CI/CD workflow to include backend configuration file

--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -3,10 +3,10 @@ name: Backend CI/CD
 on:
     push:
         branches: [main, develop]
-        paths: ["phunparty-backend/**"]
+        paths: ["phunparty-backend/**", ".github/workflows/backend-ci-cd.yml"]
     pull_request:
         branches: [main]
-        paths: ["phunparty-backend/**"]
+        paths: ["phunparty-backend/**", ".github/workflows/backend-ci-cd.yml"]
 
 jobs:
     test:
