--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -1,113 +1,113 @@
 name: Security Scan
 
 on:
-    push:
-        branches: [main, develop]
-    pull_request:
-        branches: [main]
-    schedule:
-        - cron: "0 0 * * 1" # Weekly on Monday at midnight UTC
+  push:
+    branches: [main, develop]
+  pull_request:
+    branches: [main]
+  schedule:
+    - cron: "0 0 * * 1" # Weekly on Monday at midnight UTC
 
 permissions:
-    contents: read
-    security-events: write
+  contents: read
+  security-events: write
 
 jobs:
-    security-scan:
-        runs-on: ubuntu-latest
+  security-scan:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Run Trivy vulnerability scanner
-              uses: aquasecurity/trivy-action@master
-              with:
-                  scan-type: "fs"
-                  scan-ref: "."
-                  format: "sarif"
-                  output: "trivy-results.sarif"
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: "fs"
+          scan-ref: "."
+          format: "sarif"
+          output: "trivy-results.sarif"
 
-            - name: Upload Trivy scan results to GitHub Security tab
-              uses: github/codeql-action/upload-sarif@v3
-              if: always()
-              with:
-                  sarif_file: "trivy-results.sarif"
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: "trivy-results.sarif"
 
-            - name: Run Trivy scanner in table format
-              uses: aquasecurity/trivy-action@master
-              with:
-                  scan-type: "fs"
-                  scan-ref: "."
-                  format: "table"
+      - name: Run Trivy scanner in table format
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: "fs"
+          scan-ref: "."
+          format: "table"
 
-    python-security:
-        runs-on: ubuntu-latest
-        # if: ${{ hashFiles('phunparty-backend/requirements.txt') != '' }}
+  python-security:
+    runs-on: ubuntu-latest
+    # if: ${{ hashFiles('phunparty-backend/requirements.txt') != '' }}
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: "3.13"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
 
-            - name: Install dependencies
-              run: |
-                  cd phunparty-backend
-                  python -m pip install --upgrade pip
-                  pip install safety bandit
+      - name: Install dependencies
+        run: |
+          cd phunparty-backend
+          python -m pip install --upgrade pip
+          pip install safety bandit
 
-            - name: Run Safety scan for known vulnerabilities
-              run: |
-                  cd phunparty-backend
-                  safety scan -r requirements.txt --json --output safety-report.json || true
-                  safety scan -r requirements.txt || echo "Safety scan found vulnerabilities"
+      - name: Run Safety scan for known vulnerabilities
+        run: |
+          cd phunparty-backend
+          safety scan -r requirements.txt --json --output safety-report.json || true
+          safety scan -r requirements.txt || echo "Safety scan found vulnerabilities"
 
-            - name: Run Bandit security linter
-              run: |
-                  cd phunparty-backend
-                  bandit -r . -f json -o bandit-report.json || true
-                  bandit -r . || echo "Bandit found security issues"
+      - name: Run Bandit security linter
+        run: |
+          cd phunparty-backend
+          bandit -r . -f json -o bandit-report.json || true
+          bandit -r . || echo "Bandit found security issues"
 
-            - name: Upload security reports
-              uses: actions/upload-artifact@v4
-              if: always()
-              with:
-                  name: python-security-reports
-                  path: |
-                      phunparty-backend/safety-report.json
-                      phunparty-backend/bandit-report.json
-                  retention-days: 30
+      - name: Upload security reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: python-security-reports
+          path: |
+            phunparty-backend/safety-report.json
+            phunparty-backend/bandit-report.json
+          retention-days: 30
 
-    codeql:
-        runs-on: ubuntu-latest
-        permissions:
-            actions: read
-            contents: read
-            security-events: write
+  codeql:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
-        strategy:
-            fail-fast: false
-            matrix:
-                language: ["python"]
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["python", "javascript"]
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Initialize CodeQL
-              uses: github/codeql-action/init@v2
-              with:
-                  languages: ${{ matrix.language }}
-                  queries: security-extended,security-and-quality
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+          queries: security-extended,security-and-quality
 
-            - name: Autobuild
-              uses: github/codeql-action/autobuild@v2
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
 
-            - name: Perform CodeQL Analysis
-              uses: github/codeql-action/analyze@v2
-              with:
-                  category: "/language:${{matrix.language}}"
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{matrix.language}}"
